[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-recorder"
version = "1.3.1"
description = "MQTT recorder tool"
readme = "README.md"
authors = [
    { name = "RPDSWTK" },
    { name = "Benedikt Mueller" },
]
license = { file = "LICENSE" }
dependencies = [
    "paho-mqtt >= 1.6.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/fluidon-sw/mqtt_recorder"

[project.scripts]
"mqtt-recorder" = "mqtt_recorder.__main__:main"
